// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders multiple items according to snapshot 1`] = `
<ul
  className="timeline"
>
  <li>
    <div
      className="avatar"
    >
      <img
        src="http://i.pravatar.cc/100?u=muhdiekuh"
      />
    </div>
    <div
      className="tweet-wrapper"
    >
      <div
        className="tweet"
      >
        <h6>
          muhdiekuh
        </h6>
        <p>
          Hello World!
        </p>
      </div>
      <div
        className="arrow"
      />
    </div>
  </li>
  <li>
    <div
      className="avatar"
    >
      <img
        src="http://i.pravatar.cc/100?u=tobmaster"
      />
    </div>
    <div
      className="tweet-wrapper"
    >
      <div
        className="tweet"
      >
        <h6>
          tobmaster
        </h6>
        <p>
          Hello from the other side!
        </p>
      </div>
      <div
        className="arrow"
      />
    </div>
  </li>
</ul>
`;

exports[`renders one item according to snapshot 1`] = `
<ul
  className="timeline"
>
  <TweetListItem
    key="1"
    tweet={
      Object {
        "date": "2018-09-22T12:25:41.801Z",
        "id": 1,
        "message": "Hello World!",
        "userId": "muhdiekuh",
      }
    }
  />
</ul>
`;

exports[`renders two items according to snapshot 1`] = `
<ul
  className="timeline"
>
  <TweetListItem
    key="1"
    tweet={
      Object {
        "date": "2018-09-22T12:25:41.801Z",
        "id": 1,
        "message": "Hello World!",
        "userId": "muhdiekuh",
      }
    }
  />
  <TweetListItem
    key="2"
    tweet={
      Object {
        "date": "2018-09-23T12:25:41.801Z",
        "id": 2,
        "message": "Hello from the other side!",
        "userId": "tobmaster",
      }
    }
  />
</ul>
`;

exports[`renders zero items according to snapshot 1`] = `
<ul
  className="timeline"
/>
`;
